# supademo

./: .gitignore  README.md  hello.txt  play.py  play2.py  pyproject.toml
agent/: agent.ipynb  agent.py  mark_page.js
app/: llm.py  server.py
app/agent/: prompts.py  tools.py  tts.py  utils.py  voice_agent.py  web_agent.py
app/agent/logs/: agent_log_2024-07-07.txt
client/: README.md  package-lock.json  package.json  pnpm-lock.yaml
client/src/: App.tsx  AppOld.tsx
dummy/: goodscript.js  llama.py  mark_page2.js  original_mark_page.js
dummy/agent/: mark_page.js
logs/: agent_log_2024-07-07.txt
train/: model_outputs.json  prompt.py  train.py
utility_scripts/: main.py  play.py
utility_scripts/agent/: agent-updated.ipynb  agent.ipynb
