[tool.poetry]
name = "supademo"
version = "0.1.0"
description = ""
authors = ["nischalj10 <nischalj10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.45.0"
litellm = "^1.41.7"
python-dotenv = "^1.0.1"
llama-index = "^0.10.52"
httpx = "^0.27.0"
lxml = "^5.2.2"
langchain = "^0.2.6"
langchain-core = "^0.2.11"
langchain-community = "^0.2.6"
anthropic = "^0.30.1"
google-generativeai = "^0.7.1"
ipython = "^8.26.0"
langgraph = "^0.1.5"
langsmith = "^0.1.83"
langchain-openai = "^0.1.14"
langchainhub = "^0.1.20"
libdeeplake = "^0.0.134"
hub = "^3.0.1"
retell-sdk = "3.11.0"
fastapi = "0.100.1"
uvicorn = "0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
